fixed horizontal nav text wrap issue

--- a/public/css/clueless.css
+++ b/public/css/clueless.css
@@ -89,6 +89,7 @@ div {
 	position:relative;
 	top:-57px;
 	left:220px;
+	white-space:nowrap;
 }
 .menu-td {
 	width:230px;
